# bazel-gotest-unsynced

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go_deps.bzl
.ijwb/: .bazelproject
apps/samplesvc/: BUILD.bazel  main.go
lib/log/: BUILD.bazel  logger_test.go
