load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "samplesvc_lib",
    srcs = ["main.go"],
    importpath = "github.com/edposinitckii-hf/bazel-gotest-unsynced/apps/samplesvc",
    visibility = ["//visibility:private"],
    deps = ["//lib/log"],
)

go_binary(
    name = "samplesvc",
    embed = [":samplesvc_lib"],
    visibility = ["//visibility:public"],
)
