load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "log",
    srcs = ["logger.go"],
    importpath = "github.com/edposinitckii-hf/bazel-gotest-unsynced/lib/log",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_zap//:zap"],
)

go_test(
    name = "log_test",
    srcs = ["logger_test.go"],
    embed = [":log"],
    race = "on",  # keep
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_zap//:zap",
    ],
)
